--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-vis": "^1.11.7",
     "semantic-ui-css": "^2.4.1",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "@types/react-vis": "^1.11.7",
     "gh-pages": "^3.2.3"
   }
