--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-vis": "^1.11.7",
+    "react-scripts": "^5.0.1",
+    "react-vis": "^0.3.4",
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
@@ -48,8 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.2.0",
-    "@semantic-ui-react/craco-less": "^1.2.3",
+    "@craco/craco": "^7.0.0",
+    "@semantic-ui-react/craco-less": "^3.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-vis": "^1.11.7",
     "gh-pages": "^3.2.3",
