--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "scissaria",
   "version": "0.1.0",
+  "homepage": "scissaria.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,11 +13,15 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "^5.0.1",
+    "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
