--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scissaria",
   "version": "0.1.0",
-  "homepage": "scissaria.com/",
+  "homepage": "https://teavana-t.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,13 +15,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r https://github.com/Teavana-T/Teavana-T.github.io",
+    "deploy": "gh-pages -b gh-pages -d build --remote origin",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
